# python-lomography

./: .gitignore  .gitlint  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: main.yaml  main.yml  release.yaml
docs/: requirements.txt
docs/source/: api.rst  conf.py  index.rst  usage.rst
example/: __init__.py
lomography/: __init__.py  base.py  constants.py
lomography/api/: __init__.py  cameras.py  films.py  location.py  photos.py  types.py
lomography/objects/: __init__.py  camera.py  film.py  image.py  lens.py  photo.py  tag.py  user.py
lomography/utils/: __init__.py  misc.py  requests.py
tests/: test_sanity.py
