[tool.poetry]
name = "python-lomography"
version = "0.1.0"
description = ""
authors = ["Mike Scornavacca <52425912+scornz@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "lomography"}]

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
mypy = "^1.10.0"
black = "^24.4.2"
pre-commit = "^3.7.1"
gitlint = "^0.19.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
